<resources>
>
    <string name="app_name">BoaViagem</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="erro_autenticacao">Usuario proibido</string>
    <string name="novo_gasto">Novo gasto</string>
    <string name="nova_viagem">Nova viagem</string>>
    <string name="minhas_viagens">Minhas viagens</string>
    <string name="configuracoes">Configurações</string>
    <string name="destino">Destino</string>
    <string name="tipo_de_viagem">Tipo de viagem</string>
    <string name="lazer">Lazer</string>
    <string name="negocios">Negocios</string>
    <string name="data_da_chegada">Data de Chegada</string>
    <string name="data_de_saida">Data de Saida</string>
    <string name="selecione">Selecione</string>
    <string name="orcamento">Orcamento</string>
    <string name="quantidade_de_pessoas">Quantidade de pessoas</string>
    <string name="salvar">Salvar viagem</string>
    <string name="data">Data</string>
    <string name="valor">Valor</string>
    <string name="descricao">Descrição</string>
    <string name="local">Local:</string>
    <string name="gastei">Gastei!</string>
    <string name="categoria">Categoria</string>
    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Combustivel</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Sexo</item>
        <item>Outros</item>
    </string-array>
    <string name="sair">Sair</string>
    <string name="remover_viagem">Remover viagem</string>
    <string name="remover_gasto">Remover gasto</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
    <string name="opcoes">Opções</string>
    <string name="gasto_realizado">Gasto Realizado</string>
    <string name="test">TEST</string>
    <string name="confirmacao_exclusao_viagem">Confirmaçao de exclusao de viagem</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="modo_viagem">Modo viagem</string>
    <string name="modo_viagem_sumario">Modo viagem sumario</string>
    <string name="informe_valor_limite">Informe valor limite</string>
    <string name="valor_limite_sumario">Valor limite sumario</string>
    <string name="valor_limite">Valor limite</string>
    <string name="preferencias">Preferencias</string>
    <string name="manter_conectado">Manter conectado</string>
    <string name="registro_salvo">Resgistro foi salfo</string>
    <string name="erro_salvar">Erro ao salvar</string>
</resources>
