<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="top"
    android:layout_height="match_parent"
    android:background="#333333"
    >

    <ImageView
        android:layout_width="349dp"
        android:layout_height="306dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:src="@drawable/plane"
        />

    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/usuario"
         />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text">

        <requestFocus/>
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        />
    <EditText
        android:id="@+id/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />

    <CheckBox
        android:id="@+id/manterConectado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manter_conectado"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="entrarOnclick"
        android:text="@string/entrar"
        android:layout_gravity="bottom"
        />


</LinearLayout>